# tomboonedotcom

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  tbc.db
.github/workflows/: azure-deploy.yml
alembic/: env.py
alembic/versions/: 461023a98600_initial_schema.py
src/tomboonedotcom/: config.py
src/tomboonedotcom/Models/: Consulting.py  Education.py  Employer.py  Profile.py  Project.py
static/: README.md
templates/: index.html
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
tomboonedotcom/Models/: Consulting.py  Education.py  Employer.py  Profile.py  Project.py  __init__.py
